2004-11-18  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs : beginnings of a real
	implementation for GInterfaces.  Not quite ready yet,
	so it's not active in generation.

2004-11-18  Mike Kestner  <mkestner@novell.com>

	* generator/Makefile.am : add new file.
	* generator/Method.cs : add Declaration property.
	* generator/VirtualMethod.cs : new class to generate virtual
	methods for Interfaces and objects. Unfinished.

2004-11-18  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs : remove a "new" string in the
	ChildProp class holder decl to fix build warnings.

2004-11-18  Mike Kestner  <mkestner@novell.com>

	* atk/Atk.metadata : mark an out param on Value.

2004-11-18  Mike Kestner  <mkestner@novell.com>

	* generator/*Gen.cs : add ToNativeReturnType to deal with
	the g_free string nonsense in the virtual method case.

2004-11-18  Mike Kestner  <mkestner@novell.com>

	* generator/AliasGen.cs : make this a SimpleGen.

2004-11-18  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : fix a missing semi in a vm regex.
	* */*-api.raw : regen with missing vms.

2004-11-18  Dan Winship  <danw@novell.com>

	Redo child property handling; now we generate classes to hold the
	child properties for a given widget in a container, and generate
	the child properties as properties on those classes.
	
	* parser/gapi2xml.pl (addPropElem): don't prepend "child_" to
	child prop names any more

	* generator/ClassBase.cs (ClassBase): keep childprops separate
	from properties
	(GenChildProperties): create a subclass of Gtk.ContainerChild
	containing the container type's child properties, and override the
	Container indexer to return that type.

	* generator/ObjectGen.cs (Generate): call GenChildProperties

	* generator/Property.cs:
	* generator/ChildProperty.cs: Simplify these a bunch, since child
	properties are now represented as C# properties as well. Also add
	[GLib.Property(cname)] and [Gtk.ChildProperty(cname)] attributes.
