@@ -1,3 +1,10 @@
+2004-11-22  Dan Winship  <danw@novell.com>
+
+	* generator/ClassBase.cs: 
+	* generator/ObjectGen.cs: Move child property handling from
+	ClassBase to ObjectGen (as suggested by Mike) since it's only
+	used there
+
 2004-11-18  Mike Kestner  <mkestner@novell.com>
 
 	* generator/InterfaceGen.cs : beginnings of a real
